--- a/block-timestamp/project.yaml
+++ b/block-timestamp/project.yaml
@@ -4,7 +4,8 @@ repository: "https://github.com/onfinality-io/subql-examples"
 
 schema: "./schema.graphql"
 
-endpoint: "wss://polkadot.api.onfinality.io/public-ws"
+network:
+  endpoint: "wss://polkadot.api.onfinality.io/public-ws"
 
 dataSources:
   - name: runtime
