--- a/extrinsic-finalized-block/package.json
+++ b/extrinsic-finalized-block/package.json
@@ -4,7 +4,8 @@
   "description": "This subquery indexes which block an extrinsic is finalized in",
   "main": "dist/index.js",
   "scripts": {
-    "prepack": "rm -rf dist && tsc -b",
+    "build": "tsc -b",
+    "prepack": "rm -rf dist && npm build",
     "test": "jest"
   },
   "files": [
@@ -16,7 +17,7 @@
   "license": "Apache-2.0",
   "devDependencies": {
     "@polkadot/api": "^3",
-    "@subql/types": "^0.1.0",
+    "@subql/types": "^0.4.0",
     "typescript": "^4.1.3"
   }
 }
