--- a/kitty/tsconfig.json
+++ b/kitty/tsconfig.json
@@ -7,7 +7,7 @@
     "importHelpers": true,
     "resolveJsonModule": true,
     "module": "commonjs",
-    "outDir": "subquery/dist",
+    "outDir": "dist",
     "rootDir": "src",
     "target": "es2017"
   },
