--- a/extrinsic-finalized-block/package.json
+++ b/extrinsic-finalized-block/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "build": "tsc -b",
     "prepack": "rm -rf dist && npm build",
-    "test": "jest"
+    "test": "jest",
+    "codegen": "./node_modules/.bin/subql codegen"
   },
   "files": [
     "dist",
@@ -16,8 +17,9 @@
   "author": "Ian He",
   "license": "Apache-2.0",
   "devDependencies": {
-    "@polkadot/api": "^3",
+    "@polkadot/api": "^3.4.2-17",
     "@subql/types": "^0.4.0",
-    "typescript": "^4.1.3"
+    "typescript": "^4.1.3",
+    "@subql/cli": "^0.5.0"
   }
 }
