--- a/sum-reward/package.json
+++ b/sum-reward/package.json
@@ -17,9 +17,9 @@
   "author": "Jay Ji",
   "license": "Apache-2.0",
   "devDependencies": {
-    "@polkadot/api": "^3.4.2-17",
-    "@subql/types": "^0.4.0",
+    "@polkadot/api": "^3.6.3",
+    "@subql/types": "^0.5.0",
     "typescript": "^4.1.3",
-    "@subql/cli": "^0.5.0"
+    "@subql/cli": "^0.6.1"
   }
 }
