--- a/extrinsic-finalized-block/package.json
+++ b/extrinsic-finalized-block/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "description": "This subquery indexes which block an extrinsic is finalized in",
   "main": "dist/index.js",
+  "homepage": "https://github.com/subquery/subql-examples",
+  "repository": "github:subquery/subql-examples",
   "scripts": {
     "build": "tsc -b",
     "prepack": "rm -rf dist && npm build",
