--- a/block-timestamp/docker-compose.yml
+++ b/block-timestamp/docker-compose.yml
@@ -10,25 +10,8 @@ services:
     environment:
       POSTGRES_PASSWORD: postgres
 
-  graphql-engine:
-    image: hasura/graphql-engine:v1.3.3
-    ports:
-      - "8080:8080"
-    depends_on:
-      - "postgres"
-    restart: always
-    environment:
-      HASURA_GRAPHQL_DATABASE_URL: postgres://postgres:postgres@postgres:5432/postgres
-      ## enable the console served by server
-      HASURA_GRAPHQL_ENABLE_CONSOLE: "true" # set to "false" to disable console
-      ## enable debugging mode. It is recommended to disable this in production
-      HASURA_GRAPHQL_DEV_MODE: "true"
-      HASURA_GRAPHQL_ENABLED_LOG_TYPES: startup, http-log, webhook-log, websocket-log, query-log
-      ## uncomment next line to set an admin secret
-      # HASURA_GRAPHQL_ADMIN_SECRET: myadminsecretkey
-
   subquery-node:
-    image: onfinality/subql-node:v0.8.2
+    image: onfinality/subql-node:v0.9.1
     depends_on:
       - "postgres"
     restart: always
@@ -42,5 +25,21 @@ services:
       - ./:/app
     command:
       - -f=/app
-      - --local
+
+  graphql-engine:
+    image: onfinality/subql-query:v0.2.0
+    ports:
+      - 3000:3000
+    depends_on:
+      - "postgres"
+    restart: always
+    environment:
+      DB_USER: postgres
+      DB_PASS: postgres
+      DB_DATABASE: postgres
+      DB_HOST: postgres
+      DB_PORT: 5432
+    command:
+      - --name=app
+      - --playground
 
