Add relation example (#17)
* Add nested relations example

* Upgrade image versions

* update handlers

* Fix

* Change flatten depth to 1, apply prettier

* Apply prettier

* Change image version to latest in docker-compose

* Update scripts in package.json

--- a/entity-relation/docker-compose.yml
+++ b/entity-relation/docker-compose.yml
@@ -25,6 +25,7 @@ services:
       - ./:/app
     command:
       - -f=/app
+      - --local #remove
 
   graphql-engine:
     image: onfinality/subql-query:latest
