--- a/kitty/docker-compose.yml
+++ b/kitty/docker-compose.yml
@@ -11,7 +11,7 @@ services:
       POSTGRES_PASSWORD: postgres
 
   subquery-node:
-    image: onfinality/subql-node:v0.9.1
+    image: onfinality/subql-node:latest
     depends_on:
       - "postgres"
     restart: always
@@ -27,7 +27,7 @@ services:
       - -f=/app
 
   graphql-engine:
-    image: onfinality/subql-query:v0.2.0
+    image: onfinality/subql-query:latest
     ports:
       - 3000:3000
     depends_on:
