--- a/entity-relation/package.json
+++ b/entity-relation/package.json
@@ -16,10 +16,13 @@
   ],
   "author": "Jay Ji",
   "license": "Apache-2.0",
+  "dependencies": {
+    "lodash": "^4.17.21"
+  },
   "devDependencies": {
     "@polkadot/api": "^4",
-    "@subql/types": "^0.6.1",
+    "@subql/types": "^0.7.1",
     "typescript": "^4.1.3",
-    "@subql/cli": "^0.8.0"
+    "@subql/cli": "^0.9.2"
   }
 }
