--- a/kitty/project.yaml
+++ b/kitty/project.yaml
@@ -8,7 +8,29 @@ network:
   endpoint: "ws://host.docker.internal:9944"
   types: {
     "KittyIndex": "u32",
-    "Kitty": "[u8; 16]"
+    "Kitty": "[u8; 16]",
+  }
+  typesBundle: {
+    spec: {
+      chainname: {
+        rpc: {
+          kitties: {
+            getKittyPrice:{
+                description: string;
+                params: [
+                    {
+                      name: 'kittyIndex',
+                      type: 'KittyIndex',
+                      isHistoric: true,
+                      isOptional: true
+                    }
+                ];
+                type: "Balance"
+            }
+          }
+        }
+      }
+    }
   }
 
 dataSources:
