--- a/kitty/package.json
+++ b/kitty/package.json
@@ -10,7 +10,6 @@
     "prepack": "rm -rf dist && npm build",
     "start:docker": "docker-compose pull && docker-compose up --remove-orphans",
     "codegen": "./node_modules/.bin/subql codegen",
-
     "interface-build": "yarn generate:defs && yarn generate:meta && tsc -b",
     "generate:defs": "ts-node --skip-project node_modules/.bin/polkadot-types-from-defs --package kitty-birthinfo/api-interfaces --input ./src/api-interfaces",
     "generate:meta": "ts-node --skip-project node_modules/.bin/polkadot-types-from-chain --package kitty-birthinfo/api-interfaces --endpoint ./src/api-interfaces/kitty.json --output ./src/api-interfaces --strict"
@@ -22,10 +21,8 @@
   ],
   "author": "Ian He",
   "license": "Apache-2.0",
-  "dependencies": {
-    "@polkadot/api": "^4.9.2"
-  },
   "devDependencies": {
+    "@polkadot/api": "^4.9.2",
     "@subql/types": "^0.7.1",
     "typescript": "^4.1.3",
     "@subql/cli": "^0.9.3",
