Add staking records

--- a/sum-reward/project.yaml
+++ b/sum-reward/project.yaml
@@ -28,3 +28,13 @@ dataSources:
           filter:
             module: staking
             method: Slash
+        - handler: handleStakingReward
+          kind: substrate/EventHandler
+          filter:
+            module: staking
+            method: Reward
+        - handler: handleStakingSlash
+          kind: substrate/EventHandler
+          filter:
+            module: staking
+            method: Slash
