--- a/kitty/package.json
+++ b/kitty/package.json
@@ -22,11 +22,14 @@
   "author": "Ian He",
   "license": "Apache-2.0",
   "devDependencies": {
-    "@polkadot/api": "^4",
+    "@polkadot/api": "4.6.1",
     "@subql/types": "^0.7.1",
     "typescript": "^4.1.3",
     "@subql/cli": "^0.9.3",
-    "@polkadot/typegen": "^4.9.2",
+    "@polkadot/typegen": "4.6.1",
     "ts-node": "^8.6.2"
+  },
+  "resolutions": {
+    "@polkadot/api": "4.6.1"
   }
 }
