--- a/entity-relation/project.yaml
+++ b/entity-relation/project.yaml
@@ -2,7 +2,7 @@ specVersion: "0.2.0"
 
 name: "Subql-entityrelation"
 version: "0.0.0"
-description: ""
+description: " https://github.com/subquery/subql-examples/blob/main/README.md"
 repository: "https://github.com/subquery/subql-examples"
 
 schema:
