--- a/validator-threshold/project.yaml
+++ b/validator-threshold/project.yaml
@@ -2,7 +2,7 @@ specVersion: "0.2.0"
 
 name: "Subql-validator-threshold"
 version: "0.0.0"
-description: ""
+description: "https://github.com/subquery/subql-examples/blob/main/README.md"
 repository: "https://github.com/subquery/subql-examples"
 
 schema:
