--- a/block-timestamp/project.yaml
+++ b/block-timestamp/project.yaml
@@ -2,7 +2,7 @@ specVersion: "0.2.0"
 
 name: "Subql-block-timestamp"
 version: "0.0.0"
-description: "https://github.com/subquery/subql-examples/blob/main/README.md"
+description: "Indexes timestamp of each finalized block."
 repository: "https://github.com/subquery/subql-examples"
 
 schema:
