--- a/sum-reward/project.yaml
+++ b/sum-reward/project.yaml
@@ -2,7 +2,7 @@ specVersion: "0.2.0"
 
 name: "Subql-sum-reward"
 version: "0.0.0"
-description:"https://github.com/subquery/subql-examples/blob/main/README.md"
+description: "Indexes staking bond, reward and slash from events of finalized block."
 repository: "https://github.com/subquery/subql-examples"
 
 schema:
