update validator threshold

--- a/validator-threshold/project.yaml
+++ b/validator-threshold/project.yaml
@@ -6,6 +6,7 @@ schema: "./schema.graphql"
 
 network:
   endpoint: "wss://polkadot.api.onfinality.io/public-ws"
+  dictionary: https://api.subquery.network/sq/subquery/dictionary-polkadot
 
 dataSources:
   - name: runtime
